<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RealNameScreen"
    android:background="#FFFFC7">

    <Button

        android:id="@+id/button4"
        android:layout_width="124dp"
        android:layout_height="80dp"
        android:backgroundTint="#6D98BA"
        android:fontFamily="@font/aleo"
        android:rotation="0"
        android:rotationX="0"
        android:rotationY="0"
        android:text="@string/StartButton"
        android:textColor="#320E3B"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PlayerTwo"
        app:layout_constraintVertical_bias="0.25"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/aleo_bold"
        android:text="@string/PlayerNameHeader"
        android:textColor="#320E3B"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/aleo_bold"
        android:text="@string/Header"
        android:textColor="#320E3B"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6" />

    <EditText
        android:id="@+id/PlayerOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="First player"
        android:background="#6D98BA"
        android:ems="10"
        android:hint="@string/Player1"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.13999999"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/PlayerTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="Second player"
        android:background="#6D98BA"
        android:ems="10"
        android:hint="@string/Player2"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PlayerOne"
        app:layout_constraintVertical_bias="0.135"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>